src/test/ui/rfc-2091-track-caller/error-with-naked.stderr
error[E0736]: cannot use `#[track_caller]` with `#[naked]`
  --> $DIR/error-with-naked.rs:3:1
   |
LL | #[track_caller]
   | ^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0736`.
